--- a/FrontEnd/Galeria/style.css
+++ b/FrontEnd/Galeria/style.css
@@ -177,6 +177,7 @@ input.inputBuscador{
     margin-left: .3em;
     margin-right: .3em;
     align-self: flex-start;
+    border-radius: 1%;
 }
 
 
