--- a/avance/CSS/style50Mejores.css
+++ b/avance/CSS/style50Mejores.css
@@ -74,7 +74,7 @@
 header{
     position: relative;
     padding-bottom: 15em;
-    background: url("images/pexels-photo-408518.jpeg");
+    background: url(../images/Fondo-50Mejores.jpg);
     background-size: cover;
     background-position: center;
   
@@ -85,7 +85,7 @@ header::before{
     height: 100%;
     content: '';
     background: black;
-    opacity: .65;
+    opacity: .70;
 }
 .title{
     position: relative;
@@ -177,7 +177,6 @@ input.inputBuscador{
     margin-left: .3em;
     margin-right: .3em;
     align-self: flex-start;
-    border-radius: 1%;
 }
 
 
