Agregar Requerimientos de campos
se agrego requerimiento de campo de iniciar sesion y registrarse, y una pequeña animacion en el titulo

--- a/FrontEnd/CSS/styleRegisterLogin.css
+++ b/FrontEnd/CSS/styleRegisterLogin.css
@@ -8,6 +8,10 @@ body {
 * {
     box-sizing: border-box;
 }
+.error {
+    background-color: #ffffdd;
+    border: 2px solid #D8000C;
+}
 .contenedor{
     width: 100%;
     padding: 15px;
