--- a/FrontEnd/CSS/styleMainMenu.css
+++ b/FrontEnd/CSS/styleMainMenu.css
@@ -40,60 +40,141 @@ CLASSES
     color: white;
 }
 
-/* NAV */
-.top-bar{
-    width:100%;
-    padding: .5em 0 3em;
-    background: black;
-}
-.logo{
-    float: left;
-    margin: .5em 0 0 3em;
-}
-.top-nav{
-    margin: 0;
-    padding: 0;
-    float:right;
-}
-.top-nav-item{
-    display: inline-block;
-    margin: 0 .5em;
-}
-.top-nav-link{
-    display: inline-block;
-    font-weight: 300;
-    color: #aaabab;
-    text-decoration: none;
-    padding-bottom: .8em;
-}
-.top-nav-link:hover{
-    color: #fff;
-    border-bottom: .3em solid #f44336;
-}
-
-
-.barra2{
-    padding: 10px;
-    font-size: xx-large;
-    text-align: center;  
-}
-/* INTRO */
-.intro-section{
+/**** Top ****/
+.top {
     width: 100%;
-    height: 390px;
-    padding: 2em 0;
+    background: black;
+    height: 3.5em;
+    position: fixed;
+    z-index: 99;
+}
+.mobMenu{
+    position: absolute;
+    left: 100%;
+}
+.img {
+    display: inline-block;
+    position: absolute;
+    width: 4em;
+    color: white;
+    left: 1.3em;
+
+}
+
+.name {
+    display: inline-block;
+    position: absolute;
+    left: 3.2em;
+
+    font-size: 1.5em;
+    color: white;
+}
+
+/**** TopNav ****/
+.mobMenu {
+    color: white;
+    display: none;
+}
+
+.topNav {
+    position: absolute;
+    display: inline-block;
+    right: 1.5em;
+}
+
+.topNavItem {
+    display: inline-block;
+
+    margin-left: .5em;
+    font-size: 1.2em;
+
+}
+.links{
+    color: white;
+    text-decoration: none;
+    padding-bottom: .15em;
+}
+.links:hover{  
+    border-bottom: .2em solid red;
+}
+#profilePic {
+    position: relative;
+    margin-bottom: -.5em;
+    width: 3em;
+    clip-path: circle(40% at 50% 50%);
+}
+
+/**** TopNav ****/
+/**** Top ****/
+
+/**** Header ****/
+header{
+    position: relative;
+    padding-bottom: 15em;
     background: url(../images/pexels-photo-408518.jpeg);
     background-size: cover;
-    background-position: center bottom;
+    background-position: center;
+  
 }
-.intro-title{
-    padding: 0 1.5em;
-    color: #fff;
-    font-weight: bold;
-    font-size: 2.5em;
+header::before{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    content: '';
+    background: black;
+    opacity: .65;
+}
+.title{
+    position: relative;
     text-align: center;
-    margin-top: 5em;
+    width: 60%;
+    padding-top: 5em;
+    margin: auto;
+    font-size: 1.8em;
+    color: white;
+
+
 }
+.buscador{
+    position: relative;
+    margin: auto;
+    text-align: center;
+    background: hsla(0, 0%, 100%, 0.644);
+    width: 50%;
+    height: 3.5em;
+    border-radius: 1em;
+}
+.separador{
+    display: inline-block;
+    position: relative;
+    margin: auto;
+    height: 2.5em;
+    width: .2em;
+    top: 15%;
+    right: 4%;
+    background: hsla(0, 0%, 0%, 0.37);
+}
+
+input.inputBuscador{
+    display: inline-block;
+    position: relative;
+    background: none;
+    border: none;
+    width: 88%;
+    height: 2.2em;
+    right: 3%;
+    bottom: .15em;
+    font-size: 1.5em;
+}
+.buscar{
+    display: inline-block;
+    position: relative;
+   text-decoration: none;
+   color: hsla(0, 0%, 39%, 0.712); 
+   font-size: 200%;
+   
+}
+/**** Header ****/
 .download-btn{
     display: block;
     margin: auto;
@@ -215,52 +296,77 @@ CLASSES
 /*registra foto*/
 /* MEDIA QUERIES */
 @media (max-width: 575.98px) {
-    .top-bar{
-        position: fixed;
-        padding: .5em 0 .5em;
-        z-index: 1;
+    /**** top ****/
+    .top{
+        overflow-y: visible;
+        z-index: 6;
     }
-   
-    .mob-menu{
+    .topNav{
         display: block;
-        color: #fff;
-        font-size: 1.5em;
         position: absolute;
-        top: .6em;
-        left: .5em;
-    }
-    .mob-close{
-        display: block;
-        color: #fff;
-        font-size: 2em;
-        position: absolute;
-        right: 1em;
-        top: 1em;
-    }
-    .top-nav{
-        /*display: none;*/
-        position: fixed;
-        top: 0;
-        left: -25em;
+        background: rgb(29, 29, 29);
         width: 100%;
-        height: 100%;
-        padding: 3em 0 0;
-        background: #181b1e;
+        height: 45em;
+        top: -30%;
+        width: 50%;
+        right: -80%;
         transition: .5s;
-        z-index: 2;
+        
     }
-
-    .top-nav-item{
+    .topNavItem{
+        position: relative;
+        top: 1em;
+        font-size: 2em;
         display: block;
+        align-content: center;
+        justify-content: center;
+        margin-bottom: 1.5em;
     }
-
-    .top-nav-link{
-        padding: 1em;
-        font-size: xx-large;
+    .mobMenuClose{
+        position: absolute;
+        font-size: 1.5em;
+        top: .5em;
+        right: .5em;
         color: white;
-        font-weight: bold;
+    }
+    .mobMenu{
+        display: block;
+        position: absolute;
+        top: .5em;
+        left: 90%;
+        font-size: 1.5em;
+        color: white;
+    }
+    /**** top ****/
+
+    /**** header ****/
+    header{
+        overflow: hidden;
+        padding-bottom: 8em;
+        
+    }
+    
+    .title{
+        padding-top: 35%;
+        font-size: 1.45em;
     }
 
+    .buscar{
+        font-size: 1em;
+    }
+    .buscador{
+        height: 3em;
+    }
+    input.inputBuscador{
+        font-size: 1.5em;
+        width: 5.5em;
+        border: currentColor;
+    }
+    .separador{
+        right: 3%;
+        height: 2em;
+    }
+    /**** header ****/
     .request-btn{
         font-size: 1.3em;
     }
@@ -269,12 +375,6 @@ CLASSES
         margin: 0;
     }
     
-    .intro-section{
-        padding: 3em 0;
-    }
-    .intro-title{
-        font-size: 2em;
-    }
     .about-section{
         padding: 2em 2em;
     }
@@ -296,7 +396,15 @@ CLASSES
 
 /* Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
+    /**** header ****/
+ input.inputBuscador{
+    right: .5%;
     
+ }
+ .buscar{
+     right: 2%;
+ }
+/**** header ****/ 
 }
 
 /* Large devices (desktops, less than 1200px) */
