--- a/FrontEnd/CSS/styleAdmin.css
+++ b/FrontEnd/CSS/styleAdmin.css
@@ -66,6 +66,7 @@ body {
 /**** Admin ****/
 
 .pageAdmin {
+    padding-top: 4%;
     display: grid;
     grid-template-columns: repeat(2, 49.45%);
     grid-auto-rows: minmax(150px, auto);
@@ -74,27 +75,29 @@ body {
 }
 
 /**** Zoom ****/
-.zoom{
-    height: 21em;
+.zoom {
+
+    height: 22em;
 }
+
 /**** Zoom ****/
 /**** Images ****/
 .images {
     grid-row: span 2;
-    height: 42em;
+    height: 45.5em;
 
 }
 .imgText{
-    position: relative;
+    position: absolute;
     top: 6%;
 }
 
 .imgGal {
     display: flex;
-    position: relative;
+    position: absolute;
     flex-direction: column;
     align-items: center;
-    top: 5%;
+    bottom: 1.2%;
     height: 42em;
     overflow-y: scroll;
 }
@@ -105,7 +108,8 @@ body {
 /**** Images ****/
 /**** Participants ****/
 .participants {
-    height: 21em;
+
+    height: 22em;
     
 }
 .parTitle{
@@ -114,7 +118,7 @@ body {
     
 }
 .list{
-    height: 21em;
+    height: 17em;
     overflow-y: scroll;
 }
 .listPar{
@@ -142,28 +146,3 @@ border-bottom: .2em solid rgb(104, 104, 104);
 
 /**** Participants ****/
 /**** Admin ****/
-@media (max-width: 1025px){
-    .imgGal{
-        top: 7%;
-        height: 41em;
-    }
-    .participants{
-        height: 21em;
-    }
-    
-}
-@media (max-width: 545px){
-.pageAdmin{
-    display: block;
-}
-.imgGal{
-    top: 2%;
-    flex-direction: row;
-    overflow-x: scroll;
-}
-.img{
-    width: auto;
-    height: 38em;
-    margin-left: .5em;
-}
-}
