--- a/FrontEndRespaldo/CSS/style50Mejores.css
+++ b/FrontEndRespaldo/CSS/style50Mejores.css
@@ -157,27 +157,35 @@ input.inputBuscador{
 }
 /**** SearchResults ****/
 /**** Galery ****/
-.galery{
-    margin: auto;
+.galeria {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
     width: 95%;
-    padding-top: 2em;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    align-items: flex-start;
-   
+    margin: auto;
+    grid-gap:10px;
+    padding: 40px 0;
+    overflow: hidden;
+
+
 }
-.Con{
-    background: lightblue;
+.galeria > a{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .5);
+
 }
-.imgGal{
-    margin-bottom: 1em;
-    width: 29.4em;
-    height: fit-content;
-    margin-left: .3em;
-    margin-right: .3em;
-    align-self: flex-start;
+.galeria img{
+    width:100%;
+    vertical-align: top;
+    height: 300px;
+    object-fit: cover;
+    transition: transform 0.5s;
 }
+.galeria a:hover img{
+    filter: blur(2px);
+    transform: rotate(10deg) scale(1.3);
+} 
 
 
 /**** Galery ****/
