--- a/FrontEndRespaldo/CSS/stylePerfil.css
+++ b/FrontEndRespaldo/CSS/stylePerfil.css
@@ -1,26 +1,27 @@
 /*
 HTML TAGS
 */
-body{
+body {
     margin: 0;
-    padding:0;
+    padding: 0;
     font-family: 'Roboto';
 }
-header{
-    width: 100%;
-}
-footer{
+
+
+footer {
     width: 100%;
     padding: .5em 0 .5em;
     background: #181b1e;
     text-align: center;
 }
-hr{
+
+hr {
     width: 6em;
     height: 5px;
-    border:none;
+    border: none;
     background: #ffc36e;
 }
+
 /* positioning: position, z-index, bottom, top, left, right */
 /* display & box model: display, overflow, box-sizing, width, height, padding, margin, border */
 /* color: background, color */
@@ -30,243 +31,190 @@ hr{
 /*
 CLASSES
 */
-.secondary-title{
+.secondary-title {
     text-transform: uppercase;
     font-weight: 300;
     font-size: 2em;
 }
 
-/* NAV */
-.top-bar{
-    width:100%;
-    padding: .5em 0 3em;
-    background: #000000;
-}
-.logo{   
-    float: left;
-    margin: .5em 0 0 3em;
-}
-.top-nav{
-    margin: 0;
-    padding: 0;
-    float:right;
-}
-.top-nav-item{
-    display: inline-block;
-    margin: 0 .5em;
-    left: -50px;
-    position: relative;
-}
-.top-nav-link{
-    display: block;
-    font-weight: 300;
-    color: #aaabab;
-    text-decoration: none;
-    padding-bottom: .8em;
-}
-.top-nav-link:hover{
-    color: #fff;
-    border-bottom: .3em solid #f44336;
-}
-.request-btn{
-    display: block;
-    padding: .5em;
-    border: .1em solid #00bad2;
-    border-radius: .2em;
-    font-weight: 300;
-    text-transform: uppercase;
-    color:#fff;
-    text-decoration: none;
-}
-.request-btn-m{
-    margin: 0 3em;
-}
-.request-btn:hover{
-    background: #00bad2;
-}
-
-/* INTRO */
-.intro-section{
+/**** Top ****/
+.top {
     width: 100%;
-    padding: 6em 0;
-    background: url(../images/perfilFoto.jpg);
-    background-size: cover;
-    background-position: center bottom;
-}
-
-.intro-title{
-    padding: 0 1.5em;
-    color: rgb(153, 153, 153);
-    font-weight: 100;
-    position: relative;
-    top: -3em;
-    font-size: 2em;
-    text-align: revert;
-}
-
-
-.intro-FotoPerfil{
-    padding: 0 1.5em;
-    font-weight: 100;
-    position: relative;
-    top: -2em;
-    font-size: 2em;
-    left: 5.3em;
-}
-
-.intro-NombreDePerfil{
-    padding: 0 1.5em;
-    color: rgb(255 255 255);
-    font-weight: 800;
-    position: relative;
-    top: -7.5em;
-    font-size: 2em;
-    text-align: center;
-}
-
-.intro-Descripcion{
-    padding: 0 1.5em;
-    color: rgb(255 255 255);
-    font-weight: 100;
-    position: relative;
-    top: -14.2em;
-    font-size: 1.1em;
-    text-align: center;
-}
-
-
-
-
-.twitter-btn{
-    display: block;
-    margin: auto;
-    width: 1em;
-    padding: 0.5em;
-    border-radius: 2.2em;
-    text-align: center;
     background: black;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 400;
-    position: relative;
-    top: -15.6em;
-    right: 0.6em;
+    height: 3.5em;
+    position: fixed;
+    z-index: 99;
 }
 
-.facebook-btn{
-    display: block;
-    margin: auto;
-    width: 1em;
-    padding: 0.5em;
-    border-radius: 2.2em;
-    text-align: center;
-    background: black;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 400;
-    position: relative;
-    top: -17.8em;
-    right: 4.5em;
+.mobMenu {
+    position: absolute;
+    left: 100%;
 }
 
-.pinterest-btn{
-    display: block;
-    margin: auto;
-    width: 1em;
-    padding: 0.5em;
-    border-radius: 2.2em;
-    text-align: center;
-    background: black;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 400;
-    position: relative;
-    top: -20em;
-    right: -4em;
-}
-.btn-label{
-    margin: 0 0 0 .5em;
-}
-
-
-
-/* ABOUT */
-.about-section{
-    padding: 20em 5em;
-    background:red;
-    color: #212121;
-    text-align:center;
-}
-.about-intro{
-    padding: 15em 16em;
-    background: hsla(0, 100%, 75%, 0.664);
-    
-}
-
-.imagenes{
-    
-    margin: .5em 0 0 3em;
+.img {
     display: inline-block;
+    position: absolute;
+    width: 4em;
+    color: white;
+    left: 1.3em;
+
 }
 
-
-/* CONTACT */
-.contact-section{
-    padding: 2em 5em;
-    background: #f2f2f2;
-    color: #212121;
-    text-align: center;
-}
-.contact-form{
-    width: 90%;
-    margin: auto;
-}
-.row{
-    width: 100%;
-}
-.col{
-    width:50%;
-    float: left;
-}
-.input-text{
-    width: 90%;
-    padding: 1em;
-}
-.text-area{
-    width: 95%;
-    height: 10em;
-    margin: 2em 0;
-    padding: 1em;
-    font-family: 'Roboto';
-}
-.submit-btn{
-    width: 98%;
-    background: #f2f2f2;
-    border: .1em solid #00bad2;
-    padding: 1em;
-    cursor: pointer;
-}
-.submit-btn:hover{
-    background: #00bad2;
-    color: #fff;
-}
-
-/* FOOTER */
-.bottom-nav{
-    margin: 0;
-    padding:0;
-}
-.bottom-nav-item{
+.name {
     display: inline-block;
-    margin: 1em 2em;
-}
-.footer-link{
+    position: absolute;
+    left: 3.2em;
+
     font-size: 1.5em;
-    color: #626262;
+    color: white;
 }
-.footer-link:hover{
-    color:#f44336;
+
+/**** TopNav ****/
+.mobMenu {
+    color: white;
+    display: none;
 }
-.footer-disclaimer{
-    color: #626262;
+
+.topNav {
+    position: absolute;
+    right: 1.5em;
 }
+
+.topNavItem {
+    display: inline-block;
+    margin-left: .5em;
+    font-size: 1.2em;
+
+}
+
+.links {
+    color: white;
+    text-decoration: none;
+    padding-bottom: .15em;
+}
+
+.links:hover {
+    border-bottom: .2em solid red;
+}
+
+#profilePic {
+    position: relative;
+    margin-bottom: -.5em;
+    width: 3em;
+    clip-path: circle(40% at 50% 50%);
+}
+
+/**** TopNav ****/
+/**** Top ****/
+
+/**** Header ****/
+header {
+    padding-bottom: 15em;
+    background: url(../images/pexels-photo-408518.jpeg);
+    background-size: cover;
+    background-position: center;
+
+}
+
+header::before {
+    position: absolute;
+    width: 100%;
+    height: 93%;
+    content: '';
+    background: black;
+    opacity: .65;
+}
+
+.infoUser {
+    text-align: center;
+}
+
+.profilePicHeader {
+
+    position: relative;
+    margin: auto;
+    margin-top: 10%;
+    margin-bottom: 0%;
+    width: 20%;
+    clip-path: circle(30% at 50% 40%);
+
+}
+
+.nameUser {
+    color: white;
+    font-size: 2em;
+    position: relative;
+    margin-top: 0%;
+    margin-bottom: 1%;
+}
+
+.descriptionUser {
+    position: relative;
+    color: rgb(187, 187, 187);
+    margin-top: 0%;
+}
+
+.linksUser {
+    position: relative;
+    display: block;
+    margin-right: 3.5em;
+
+}
+
+.linkItem {
+    display: inline-block;
+}
+
+.linkU {
+    position: relative;
+    margin-left: .5em;
+    font-size: 2em;
+    color: white;
+    text-decoration: none;
+
+}
+
+.linkU:hover {
+    color: lightgrey;
+}
+
+/**** Header ****/
+/**** Galery ****/
+.upload-section {
+
+
+    color: #212121;
+    text-align: center;
+}
+
+.uploadTitle {
+    position: relative;
+    margin-top: 1%;
+    margin-bottom: .2%;
+    font-size: 2em;
+}
+
+.separatorUpload {
+    position: relative;
+    margin: auto;
+    width: 90%;
+    height: .2em;
+    background-color: black;
+    opacity: 10%;
+}
+
+.uploadImg {
+    color: rgb(107, 107, 107);
+    margin-top: 2%;
+    font-size: 4em;
+    background: rgb(206, 206, 206);
+    padding: 12%;
+    margin-bottom: 2%;
+}
+
+.uploadImg:hover {
+    background: rgb(214, 0, 0);
+    color: white;
+}
+
+/**** Galery ****/
