JavaScript barra de busqueda
agregue que se borrara la bara de busqueda cada que le des al boton en 50 fotos

--- a/FrontEndRespaldo/CSS/style50Mejores.css
+++ b/FrontEndRespaldo/CSS/style50Mejores.css
@@ -11,6 +11,10 @@
     position: fixed;
     z-index: 99;
 }
+.error {
+    background-color: #ffffdd;
+    border: 2px solid #D8000C;
+}
 .mobMenu{
     position: absolute;
     left: 100%;
