--- a/FrontEndRespaldo/CSS/stylePerfil.css
+++ b/FrontEndRespaldo/CSS/stylePerfil.css
@@ -8,25 +8,8 @@ body {
 }
 
 
-footer {
-    width: 100%;
-    padding: .5em 0 .5em;
-    background: #181b1e;
-    text-align: center;
-}
 
-hr {
-    width: 6em;
-    height: 5px;
-    border: none;
-    background: #ffc36e;
-}
 
-/* positioning: position, z-index, bottom, top, left, right */
-/* display & box model: display, overflow, box-sizing, width, height, padding, margin, border */
-/* color: background, color */
-/* text: font-family, font-size, line-height, text-align */
-/* other: cursor */
 
 /*
 CLASSES
@@ -46,10 +29,7 @@ CLASSES
     z-index: 99;
 }
 
-.mobMenu {
-    position: absolute;
-    left: 100%;
-}
+
 
 .img {
     display: inline-block;
@@ -71,8 +51,11 @@ CLASSES
 
 /**** TopNav ****/
 .mobMenu {
+    position: absolute;
+    margin-top: 1%;
+    font-size: 2em;
     color: white;
-    display: none;
+    left: 100%;
 }
 
 .topNav {
@@ -109,6 +92,7 @@ CLASSES
 
 /**** Header ****/
 header {
+    position: relative;
     padding-bottom: 15em;
     background: url(../images/pexels-photo-408518.jpeg);
     background-size: cover;
@@ -119,7 +103,7 @@ header {
 header::before {
     position: absolute;
     width: 100%;
-    height: 93%;
+    height: 100%;
     content: '';
     background: black;
     opacity: .65;
@@ -166,7 +150,7 @@ header::before {
 }
 
 .linkU {
-    position: relative;
+
     margin-left: .5em;
     font-size: 2em;
     color: white;
@@ -218,3 +202,72 @@ header::before {
 }
 
 /**** Galery ****/
+/****Media Querie ****/
+@media (max-width: 545px) {
+
+    /**** top ****/
+    .top {
+        overflow-y: visible;
+        z-index: 6;
+    }
+
+    .topNav {
+        display: block;
+        background: rgb(29, 29, 29);
+        width: 100%;
+        height: 46em;
+        margin-top: 0%;
+        width: 50%;
+        right: -60%;
+        transition: .5s;
+
+    }
+
+    .topNavItem {
+        font-size: 2em;
+        display: block;
+        align-content: center;
+        justify-content: center;
+        margin-top: 20%;
+        margin-left: 0%;
+        margin-bottom: 1.5em;
+    }
+
+    .mobMenuClose {
+        position: absolute;
+        font-size: 1.5em;
+        top: .5em;
+        right: .5em;
+        color: white;
+    }
+
+    .mobMenu {
+        margin-top: .5em;
+        left: 90%;
+        font-size: 1.5em;
+    }
+
+    /**** top ****/
+
+    /**** header ****/
+    header {
+        overflow: hidden;
+        padding-bottom: 10em;
+        margin-bottom: 8%;
+    }
+    .profilePicHeader{
+        margin-top: 30%;
+        width: 60%;
+    }
+    /**** header ****/
+}
+@media (max-width: 1025px){
+    .profilePicHeader{
+        width: 40%;
+        margin-top: 20%;
+    }
+    header{
+        padding-bottom: 6em;
+    }
+}
+/****Media Querie ****/
